# resources/views/pages/reports.blade.php
@@ -15,23 +15,26 @@
 
 @section('content')
 
-    <div class="row">
+    <div class="row mt-2 mb-1">
         <div class="col-3">
             <aside class="border border-success rounded shadow p-2">
 
-                <div class="row mt-5">
-                    <div class="col">
-                        <h1 class="text-center">Get reports</h1>
+                <div class="row h-25">
+                    <div class="col text-center">
+                        <h1>Get Reports</h1>
+                        <small class="text-danger">Click on the map to set the desired location</small>
                     </div>
                 </div>
 
-                <div class="row h-50 align-items-center">
+                <div class="row h-25 align-items-center">
                     <div class="col">
                         <form id="get-reports">
                             <div class="form-group row justify-content-between">
                                 <label class="col-1 col-form-label">From</label>
                                 <div class="col-10">
-                                    <input type="text" name="from" class="form-control form-control-sm datepicker" autocomplete="off" value="{{ date('Y-m-d', strtotime( date('Y-m-d') . " - 1 month")) }}">
+                                    <input type="text" name="from" class="form-control form-control-sm datepicker"
+                                           autocomplete="off"
+                                           value="{{ date('Y-m-d', strtotime( date('Y-m-d') . " - 1 month")) }}">
                                     <small class="form-text text-muted">Default: last 30 days</small>
                                 </div>
                             </div>
@@ -39,7 +42,8 @@
                             <div class="form-group row justify-content-between">
                                 <label class="col-1 col-form-label">To</label>
                                 <div class="col-10">
-                                    <input type="text" name="to" class="form-control form-control-sm datepicker" autocomplete="off" value="{{ date('Y-m-d') }}">
+                                    <input type="text" name="to" class="form-control form-control-sm datepicker"
+                                           autocomplete="off" value="{{ date('Y-m-d') }}">
                                     <small class="form-text text-muted">Default: Current day</small>
                                 </div>
                             </div>
@@ -47,7 +51,8 @@
                             <div class="form-group row justify-content-between">
                                 <label class="col-1 col-form-label">Radius</label>
                                 <div class="col-10">
-                                    <input name="radius" type="range" id="radius" class="form-control" min="1" max="100" value="20">
+                                    <input name="radius" type="range" id="radius" class="form-control" min="1" max="100"
+                                           value="20">
                                     <small class="form-text text-center">20 km</small>
                                     <small class="form-text text-muted">The radius is expressed in
                                         <strong>kilometers</strong></small>
@@ -56,9 +61,17 @@
                             </div>
 
                             <div class="col text-center">
-                                <input  type="submit" value="Get" class="btn btn-success">
+                                <input type="submit" value="Get" class="btn btn-success">
                             </div>
                         </form>
+                    </div>
+
+                </div>
+
+                <div class="row h-50 align-items-end justify-content-center">
+
+                    <div class="col text-center">
+                        <a id="hide-locations" class="btn btn-primary" role="button" href="#">Hide locations</a>
                     </div>
 
                 </div>
